--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@
 # SITE SETTINGS
 #
 title: CONNORTONE
-description: "created under duress for the CONNORTONE company of Schaumberg Illinois"
-year: 2022
+description: "created under duress for the CONNORTONE company of Schaumberg, Illinois"
+year: 2024
 author: neal connor
 # add search box to navbar, true/false
-search: false
+search: true
 
 ##########
 # URL VARIABLES [optional!]
@@ -23,11 +23,11 @@ search: false
 #
 # use url for the domain, e.g. https://thecdil.github.io
 # on gh-pages follow the pattern: https://username.github.io
-url:
+url: https://nconnor.github.io
 # use baseurl to add subsection of the domain, e.g. /timelinejs-template
 # on gh-pages this is a / followed by the name of the repository
 # baseurl is your github repository's name prefixed with a /
-baseurl:
+baseurl: /nconnor.github.io
 # location of code, the full url to your github repository
 source-code: https://github.com/nconnor/nconnor.github.io
 
