--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,14 +28,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
       - name: Setup Pages
-5       uses: actions/configure-pages@v5.0.0
+        uses: actions/configure-pages@v5.0.0
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1.0.12
         with:
           source: ./
           destination: ./_site
       - name: Upload artifact
-3       uses: actions/upload-pages-artifact@v3.0.1
+        uses: actions/upload-pages-artifact@v3.0.1
 
   # Deployment job
   deploy:
